Modify packagee.json with engine

--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
-{
-  "name": "todolist-v1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
+{ "name": "todolist-v1", "version": "1.0.0", "description": "", "main": 
+  "app.js", "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,5 +10,10 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.0"
+  }
+}
+{
+  "engines": {
+    "node": ">=16.20.1"
   }
 }
